update hop